--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,5 @@
 /* Your CSS Code here. */
 .holder{
 	display: grid;
-	grid-template-columns: repeat(2, 100px);
+	grid-template-columns: 100px 100px;
 }
